# gprof2dot_magic

./: .gitignore  README.md  example.ipynb  gprof2dot_magic.py  pyproject.toml
