[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "gprof2dot_magic"
author = "Mattijn van Hoek"
author-email = "mattijn@gmail.com"
home-page = "https://github.com/mattijn/gprof2dot_magic"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]

